# flash-attention-from-scratch

./: .gitignore  README.md  benchmark.py  flash_attn_pytorch.py  flash_attn_triton.py  pyproject.toml
benchmarking/: benchmark.py  naive_attention.py  plots.py
