[project]
name = "flash-attention-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "ipykernel>=7.1.0",
    "numpy>=2.3.5",
    "pytest>=9.0.1",
    "torch>=2.9.1",
    "triton>=3.5.1",
]
